# buf_stream_reader

./: Cargo.toml  README.md
src/: lib.rs  reader.rs
